fixed outline style on safari

--- a/src/app/core/components/datetime-picker/datetime-picker.component.scss
+++ b/src/app/core/components/datetime-picker/datetime-picker.component.scss
@@ -2,6 +2,7 @@
 
 :host {
 	position: relative;
+	outline: none;
 }
 
 .dropdown {
